<resources>
    <string name="app_name">JiKeU</string>
    <string name="dingdan_guanli">订单管理</string>
    <string name="xuanze_dizhi">请选择收货地址</string>
    <string name="my_message">我的资料</string>
    <string name="skip">点击跳转</string>
    <string name="my_youhuijuan">我的优惠券</string>
    <string name="my_shangpin">我的商品</string>
    <string name="my_shoucang">我的收藏</string>
    <string name="shoto">头像</string>
    <string name="message_name">昵称</string>
    <string name="hint_name">请输入昵称</string>
    <string name="dizhi_guanli">地址管理</string>
    <string name="contact_number">联系电话</string>
    <string name="hint_contact">请输入联系电话</string>
    <string name="save">保存</string>
    <string name="hint_contactnumber">请输入电话号码</string>
    <string name="hint_alter_name">请输入昵称，让自己与众不同。</string>
    <string name="_13800138000">13800138000</string>
    <string name="address_name">收货人名</string>
    <string name="xxxxxxxxxxxxxxxxxxxxxxxxxxxxx">收货地址xxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="address_item">设为默认地址</string>
    <string name="address_item_edit">编辑</string>
    <string name="address_item_detele">删除</string>
    <string name="add_address">添加地址</string>
    <string name="hint_add_name">联系人</string>
    <string name="contact_address">联系地址</string>
    <string name="contact_add_number">联系电话</string>
    <string name="no_network">当前没有网络</string>
    <string name="sd_isexist">该设备没有sd卡</string>
    <string name="not_coupon">已失效优惠券</string>
    <string name="store_name">商店名称</string>
    <string name="xxxxxxxxxxxxxxx">使用期限:xxxxxxxxxxxxxxx</string>
    <string name="all_order">全部</string>
    <string name="obligation">待付款</string>
    <string name="wait_take">待收货</string>
    <string name="wait_assess">待评价</string>
    <string name="exti_fund">退货/退款</string>
    <string name="not_obligation">未付款</string>
    <string name="zhifu">马上支付</string>
    <string name="collect_store">店铺</string>
    <string name="collectcontent">内容</string>
    <string name="yishoucang">已收藏</string>
    <string name="message_store">店铺信息店铺信息店铺信息店铺信息店铺信息店铺信息店铺信息</string>
</resources>
