<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/bg_layout"
              android:layout_height="match_parent">

    <include layout="@layout/header_text"/>

    <LinearLayout
        android:id="@+id/llMessageShoto"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/usual_margin"
        android:background="@color/bg_buju"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_main_layout_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textview_message"
            android:layout_marginTop="@dimen/usual_margin_half"
            android:text="@string/shoto"/>

        <ImageView
            android:id="@+id/ivMessageShoto"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="@dimen/usual_margin"
            android:src="@mipmap/ic_launcher"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_message_my_name"
        android:layout_marginTop="@dimen/usual_margin_half_x"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/bg_buju"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textview_message"
            android:text="@string/message_name"/>

        <TextView
            android:id="@+id/tvMessageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textview_message_new"
            android:text="@string/hint_name"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/skip_start_intent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_message_my_access"
        android:layout_marginTop="@dimen/usual_padding_x"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/bg_buju"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textview_message"
            android:text="@string/dizhi_guanli"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textview_message_new"
            android:text="@string/xuanze_dizhi"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/skip_start_intent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_message_my_contact"
        android:layout_marginTop="@dimen/usual_margin_half_x"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/bg_buju"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textview_message"
            android:text="@string/contact_number"/>

        <TextView
            android:id="@+id/tvMessageNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textview_message_new"
            android:text="@string/hint_contact"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/skip_start_intent"/>
    </LinearLayout>

</LinearLayout>