<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_layout"
              android:orientation="vertical">

    <include layout="@layout/header_text"/>

    <LinearLayout
        android:id="@+id/rgMyOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_buju"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rbAllOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/usual_padding_x"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/all_order"
            android:textColor="@color/black_opaque"/>

        <TextView
            android:id="@+id/rbObligation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/usual_padding_x"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/obligation"
            android:textColor="@color/newtext"/>

        <TextView
            android:id="@+id/rbWaitTake"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/usual_padding_x"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wait_take"
            android:textColor="@color/newtext"/>

        <TextView
            android:id="@+id/rbWaitAssess"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/usual_padding_x"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wait_assess"
            android:textColor="@color/newtext"/>

        <TextView
            android:id="@+id/rbExtiFund"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/usual_padding_x"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/exti_fund"
            android:textColor="@color/newtext"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/newtext"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/vpOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>