<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/header_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_alter_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:maxLength="11"
                android:inputType="number"
                android:hint="@string/hint_contact"
                />

            <ImageView
                android:id="@+id/iv_alter_detele"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/usual_margin"
                android:src="@drawable/detele"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/usual_padding_x"
            android:text="@string/hint_contactnumber"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_alter_name_save"
            android:layout_gravity="center"
            style="@style/button_login_regiter"
            android:layout_width="match_parent"
            android:text="@string/save"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</FrameLayout>