<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/activity_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_layout"
              android:orientation="vertical"
    >

    <include layout="@layout/header_text"/>

    <LinearLayout
        android:id="@+id/ll_activity_my_message"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/usual_margin"
        android:background="@color/bg_buju"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivUserImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="@dimen/usual_padding_x"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/tv_main_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textview_message"
            android:layout_marginTop="@dimen/usual_margin_half"
            android:text="@string/app_name"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_activity_my_order"
        android:layout_marginTop="@dimen/usual_margin"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/bg_buju"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textview_message"
            android:text="@string/dingdan_guanli"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/skip_start_intent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_activity_my_coupon"
        android:layout_marginTop="@dimen/usual_margin_half_x"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/bg_buju"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textview_message"
            android:text="@string/my_youhuijuan"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/skip_start_intent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_activity_my_collect"
        android:layout_marginTop="@dimen/usual_margin_half_x"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/bg_buju"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textview_message"
            android:text="@string/my_shoucang"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/skip_start_intent"/>
    </LinearLayout>
</LinearLayout>
